add expand command with visitor
Signed-off-by: YANGDB <yang.db.dev@gmail.com>